--- a/app/src/main/res/layout/fragment_home_mine_message.xml
+++ b/app/src/main/res/layout/fragment_home_mine_message.xml
@@ -39,11 +39,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rcl_home_mine_message_recyclerview"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        </android.support.v7.widget.RecyclerView>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rcl_home_mine_message_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </android.support.v7.widget.RecyclerView>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="@drawable/little_shape" />
+
+        </FrameLayout>
 
         <RelativeLayout
             android:id="@+id/rl_delete_dialog"
