--- a/app/src/main/res/drawable/long_btn_bg_shape_white.xml
+++ b/app/src/main/res/drawable/long_btn_bg_shape_white.xml
@@ -2,8 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item >
         <shape android:shape="rectangle">
-            <stroke android:width="2dp" android:color="@color/color_f4f4f4"/>
-            <corners android:radius="40dp" />
+            <stroke android:width="2px" android:color="@color/color_d8d8d8"/>
+            <corners android:radius="63px" />
         </shape>
     </item>
 </layer-list>
