--- a/app/src/main/res/layout/fragment_home_mine__set_name.xml
+++ b/app/src/main/res/layout/fragment_home_mine__set_name.xml
@@ -44,45 +44,54 @@
             android:visibility="visible" />
     </RelativeLayout>
 
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:layout_marginTop="8dp">
+        android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/et_mine_personal_information_new_name"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:background="@null"
-            android:hint="@string/USER_NAME"
-            android:maxLength="12"
-            android:textColor="@color/color_333333"
-            android:textSize="16sp" />
+            android:layout_height="54dp"
+            android:layout_marginTop="8dp">
+
+            <EditText
+                android:id="@+id/et_mine_personal_information_new_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@null"
+                android:hint="@string/USER_NAME"
+                android:maxLength="12"
+                android:textColor="@color/color_333333"
+                android:textSize="16sp" />
+
+            <View
+                android:id="@+id/view_mine_personal_information_new_name_line"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@color/color_f2f2f2" />
+
+            <ImageView
+                android:id="@+id/iv_mine_personal_information_new_name_clear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="20dp"
+                android:src="@drawable/btn_login_clear_text"
+                android:visibility="gone" />
+
+        </RelativeLayout>
 
         <View
-            android:id="@+id/view_mine_personal_information_new_name_line"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:background="@color/color_f2f2f2" />
-
-        <ImageView
-            android:id="@+id/iv_mine_personal_information_new_name_clear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
-            android:src="@drawable/btn_login_clear_text"
-            android:visibility="gone" />
-
-    </RelativeLayout>
-
+            android:layout_height="10dp"
+            android:background="@drawable/little_shape" />
+    </FrameLayout>
 </LinearLayout>
 
