--- a/app/src/main/res/layout/fragment_mine_friend_scan_add.xml
+++ b/app/src/main/res/layout/fragment_mine_friend_scan_add.xml
@@ -70,7 +70,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </RelativeLayout>
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="@drawable/little_shape" />
     </FrameLayout>
 
     <TextView
