--- a/app/src/main/res/layout/fragment_mine_friend_share_devices.xml
+++ b/app/src/main/res/layout/fragment_mine_friend_share_devices.xml
@@ -97,5 +97,11 @@
                 android:textSize="15sp" />
         </LinearLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="@drawable/little_shape" />
+
     </FrameLayout>
+
 </LinearLayout>
