--- a/app/src/main/res/layout/fragment_mine_info_set_password.xml
+++ b/app/src/main/res/layout/fragment_mine_info_set_password.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:background="@color/color_white">
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="73dp"
@@ -44,86 +43,103 @@
             android:src="@drawable/icon_finish" />
     </RelativeLayout>
 
-    <RelativeLayout
-    android:layout_marginTop="8dp"
-    android:layout_width="match_parent"
-    android:layout_height="54dp">
-
-        <EditText
-            android:id="@+id/et_mine_personal_information_old_password"
-            android:textColor="@color/color_333333"
-            android:textSize="16sp"
-            android:layout_centerVertical="true"
-            android:hint="@string/Tap3_ChangePassword"
-            android:maxLength="12"
-            android:inputType="textPassword"
-            android:background="@null"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <View
-            android:id="@+id/view_mine_personal_information_old_password_line"
-            android:layout_marginBottom="8dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/color_f2f2f2" />
-
-        <ImageView
-            android:id="@+id/iv_mine_personal_information_old_password_clear"
-            android:visibility="gone"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/btn_login_clear_text" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_marginTop="8dp"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="54dp">
+        android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/et_mine_personal_information_new_password"
-            android:textColor="@color/color_333333"
-            android:textSize="16sp"
-            android:layout_centerVertical="true"
-            android:hint="@string/NEW_PWD"
-            android:maxLength="12"
-            android:inputType="textPassword"
-            android:background="@null"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:layout_marginTop="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="54dp">
+
+                <EditText
+                    android:id="@+id/et_mine_personal_information_old_password"
+                    android:textColor="@color/color_333333"
+                    android:textSize="16sp"
+                    android:layout_centerVertical="true"
+                    android:hint="@string/Tap3_ChangePassword"
+                    android:maxLength="12"
+                    android:inputType="textPassword"
+                    android:background="@null"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <View
+                    android:id="@+id/view_mine_personal_information_old_password_line"
+                    android:layout_marginBottom="8dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/color_f2f2f2" />
+
+                <ImageView
+                    android:id="@+id/iv_mine_personal_information_old_password_clear"
+                    android:visibility="gone"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="20dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_login_clear_text" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_marginTop="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="54dp">
+
+                <EditText
+                    android:id="@+id/et_mine_personal_information_new_password"
+                    android:textColor="@color/color_333333"
+                    android:textSize="16sp"
+                    android:layout_centerVertical="true"
+                    android:hint="@string/NEW_PWD"
+                    android:maxLength="12"
+                    android:inputType="textPassword"
+                    android:background="@null"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <View
+                    android:id="@+id/view_mine_personal_information_new_password_line"
+                    android:layout_marginBottom="8dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/color_f2f2f2" />
+
+                <ImageView
+                    android:id="@+id/iv_mine_personal_information_new_password_clear"
+                    android:visibility="gone"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="20dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_login_clear_text" />
+
+            </RelativeLayout>
+
+        </LinearLayout>
 
         <View
-            android:id="@+id/view_mine_personal_information_new_password_line"
-            android:layout_marginBottom="8dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/color_f2f2f2" />
-
-        <ImageView
-            android:id="@+id/iv_mine_personal_information_new_password_clear"
-            android:visibility="gone"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/btn_login_clear_text" />
-
-    </RelativeLayout>
+            android:layout_height="10dp"
+            android:background="@drawable/little_shape" />
+    </FrameLayout>
 
 </LinearLayout>
