--- a/app/src/main/res/layout/fragment_set_remark_name.xml
+++ b/app/src/main/res/layout/fragment_set_remark_name.xml
@@ -43,44 +43,53 @@
             android:src="@drawable/icon_finish" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_marginTop="8dp"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="54dp">
+        android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/et_mine_set_remarkname_new_name"
-            android:textColor="@color/color_333333"
-            android:textSize="16sp"
-            android:layout_centerVertical="true"
-            android:hint="@string/Tap3_Friends_UserInfo_Name"
-            android:maxLength="12"
-            android:background="@null"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
+        <RelativeLayout
+            android:layout_marginTop="8dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="54dp">
+
+            <EditText
+                android:id="@+id/et_mine_set_remarkname_new_name"
+                android:textColor="@color/color_333333"
+                android:textSize="16sp"
+                android:layout_centerVertical="true"
+                android:hint="@string/Tap3_Friends_UserInfo_Name"
+                android:maxLength="12"
+                android:background="@null"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <View
+                android:id="@+id/view_mine_personal_set_remarkname_new_name_line"
+                android:layout_marginBottom="8dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/color_f2f2f2" />
+
+            <ImageView
+                android:id="@+id/iv_mine_personal_set_remarkname_clear"
+                android:visibility="gone"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="20dp"
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/btn_login_clear_text" />
+
+        </RelativeLayout>
 
         <View
-            android:id="@+id/view_mine_personal_set_remarkname_new_name_line"
-            android:layout_marginBottom="8dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/color_f2f2f2" />
-
-        <ImageView
-            android:id="@+id/iv_mine_personal_set_remarkname_clear"
-            android:visibility="gone"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/btn_login_clear_text" />
-
-    </RelativeLayout>
-
+            android:layout_height="10dp"
+            android:background="@drawable/little_shape" />
+    </FrameLayout>
 </LinearLayout>
