--- a/app/src/main/res/layout/layout_suggestion_recycleview_list.xml
+++ b/app/src/main/res/layout/layout_suggestion_recycleview_list.xml
@@ -13,6 +13,11 @@
     <include
         layout="@layout/layout_loading_progress_rotate"
         />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@drawable/little_shape" />
 </FrameLayout>
 
     <!--<?xml version="1.0" encoding="utf-8"?>-->
